create clip classifier inference file

--- a/clip_classifier for crash(new).ipynb
+++ b/clip_classifier for crash(new).ipynb
@@ -3050,7 +3050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "1ea92acb",
    "metadata": {},
    "outputs": [
@@ -3073,7 +3073,7 @@
     "with open(CSV_PATH, 'r') as f:\n",
     "    reader = csv.DictReader(f)\n",
     "    for row in reader:\n",
-    "        image_name = row['image_label']  # column name as in your CSV\n",
+    "        image_name = row['image_label']  # column name as in the CSV\n",
     "        label = int(row['label'])\n",
     "        embedding_file = os.path.splitext(image_name)[0] + '.npy'\n",
     "        embedding_path = os.path.join(EMBEDDINGS_DIRECTORY, embedding_file)\n",
