format the crash training pipeline notebook

--- a/clip_classifier for crash(new).ipynb
+++ b/clip_classifier for crash(new).ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6a563dab",
+   "metadata": {},
+   "source": [
+    "### Import the necessary Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ab8d722d",
@@ -42,6 +50,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5f73c4da",
+   "metadata": {},
+   "source": [
+    "### Specify/update the paths of the data files"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "01bc7dda",
@@ -61,6 +77,14 @@
     "CSV_PATH = 'car_crash_data2.csv'\n",
     "\n",
     "YOLO_MODEL_PATH = r\"E:\\VS Code Folders\\yolo_training\\runs\\yolo11l.pt_2025-07-01_epochs_80_val_0.08\\weights\\best.pt\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb283a55",
+   "metadata": {},
+   "source": [
+    "### Function to create directories if they don't exist"
    ]
   },
   {
@@ -101,6 +125,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c919925e",
+   "metadata": {},
+   "source": [
+    "### Specify the labels"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "04efabbc",
@@ -108,6 +140,14 @@
    "outputs": [],
    "source": [
     "LABELS = ['crash', 'no crash']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d30082b",
+   "metadata": {},
+   "source": [
+    "### Function to download the videos if they don't already exist"
    ]
   },
   {
@@ -144,6 +184,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d289c407",
+   "metadata": {},
+   "source": [
+    "### Function to check if a path already exists"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "2752ea3d",
@@ -154,6 +202,14 @@
     "    if os.path.exists(path):\n",
     "        print(f\"Path: {path} already exists..!!\")\n",
     "        return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06e587a0",
+   "metadata": {},
+   "source": [
+    "### This function saves an image in the specified path if it already doesn't exist"
    ]
   },
   {
@@ -169,6 +225,14 @@
     "        return False\n",
     "    cv2.imwrite(output_path, frame)\n",
     "    return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1997f3c",
+   "metadata": {},
+   "source": [
+    "### This function uses OpenCV to extract a specified frame number from a video"
    ]
   },
   {
@@ -215,6 +279,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1b61dee9",
+   "metadata": {},
+   "source": [
+    "### This function determines if the given frame index is a crash frame or a no crash frame index"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "b74865dc",
@@ -223,6 +295,14 @@
    "source": [
     "def is_crash(frame_idx, ranges):\n",
     "    return any(start <= frame_idx <= end for start, end in ranges)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ca1f8f3",
+   "metadata": {},
+   "source": [
+    "### This function runs YOLO on a frame and tells if there is a rally car in the frame or not"
    ]
   },
   {
@@ -241,6 +321,14 @@
     "            return True  # At least one car detected\n",
     "\n",
     "    return False  # No car detected above threshold\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "641dd5ff",
+   "metadata": {},
+   "source": [
+    "### Function to load YOLO model"
    ]
   },
   {
@@ -297,6 +385,16 @@
    "source": [
     "# video_names = set(['vid_596.mp4', 'vid_1017.mp4', 'vid_587.mp4', 'vid_576.mp4', 'vid_624.mp4', 'vid_796.mp4', 'vid_705.mp4', 'vid_709.mp4', 'vid_575.mp4', 'vid_622.mp4', 'vid_847.mp4', 'vid_800.mp4', 'vid_863.mp4', 'vid_861.mp4', 'vid_600.mp4'])\n",
     "video_names = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6453b736",
+   "metadata": {},
+   "source": [
+    "### This loop processes the metadata, goes through videos and creates the crash dataset\n",
+    "#### It saves the images, names them with corresponding video names and labels\n",
+    "#### Finally, it creates a CSV file that contains the following information: [\"video\", \"image_label\", \"frame_number\", \"label\"]"
    ]
   },
   {
@@ -2900,7 +2998,7 @@
     "                    writer.writerow([video_name, image_label[19:], frame_number, 1])  # Label 1 = crash\n",
     "                    extract_frame_by_iteration(video_path, frame_number, image_label, save=True)\n",
     "\n",
-    "            # 4. Sample every nth other frame\n",
+    "            # 4. Sample every nth (no crash) frame\n",
     "            for frame_number in range(1, frame_count, 15):\n",
     "                if is_crash(frame_number, crash_ranges):\n",
     "                    continue  # Already handled\n",
@@ -2913,6 +3011,14 @@
     "                if save_image(image_label, frame):\n",
     "                    print(f\"Frame {frame_number} saved successfully.\")\n",
     "                writer.writerow([video_name, image_label[19:], frame_number, 0])  # Label 0 = no crash"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4fa9272",
+   "metadata": {},
+   "source": [
+    "### Remove duplicates (if any) present in the CSV file"
    ]
   },
   {
@@ -2940,6 +3046,14 @@
     "    writer = csv.DictWriter(file, fieldnames=fieldnames)\n",
     "    writer.writeheader()\n",
     "    writer.writerows(deduplicated_rows)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0884345c",
+   "metadata": {},
+   "source": [
+    "### Count the number of \"crash\" and \"no crash\" frames"
    ]
   },
   {
@@ -2975,6 +3089,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e9c753af",
+   "metadata": {},
+   "source": [
+    "### Function to Load the CLIP model for embeddings generation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "38190150",
@@ -3007,6 +3129,14 @@
    ],
    "source": [
     "clip_model, preprocess, device = load_clip_model()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fc653a1",
+   "metadata": {},
+   "source": [
+    "### Go through all the images saved, create each image's embeddings and save them"
    ]
   },
   {
@@ -3046,6 +3176,14 @@
     "    # Convert to numpy and save\n",
     "    embedding = img_feat.squeeze(0).cpu().numpy()\n",
     "    np.save(emb_path, embedding)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0bec984",
+   "metadata": {},
+   "source": [
+    "### Plot the T-SNE using the embeddings and the labels"
    ]
   },
   {
@@ -3107,6 +3245,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fda3edd2",
+   "metadata": {},
+   "source": [
+    "### PCA visualization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "id": "86b90d46",
@@ -3141,6 +3287,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2534241",
+   "metadata": {},
+   "source": [
+    "### Heatmap"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "id": "647bdbed",
@@ -3165,6 +3319,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3b55ec6",
+   "metadata": {},
+   "source": [
+    "### Load the CSV file and map all the images to the video they belong to"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "afb85331",
@@ -3180,6 +3342,14 @@
     "        if video not in video_to_rows:\n",
     "            video_to_rows[video] = []\n",
     "        video_to_rows[video].append(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f129d12e",
+   "metadata": {},
+   "source": [
+    "### Split the data (by videos) in training and validation sets"
    ]
   },
   {
@@ -3203,6 +3373,14 @@
     "train_videos, val_videos = train_test_split(videos, test_size=0.1, random_state=37)\n",
     "print(f\"Train videos: {len(train_videos)}\")\n",
     "print(f\"Validation videos: {len(val_videos)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ef07584",
+   "metadata": {},
+   "source": [
+    "### Function to load the embeddings and the corresponding labels"
    ]
   },
   {
@@ -3247,6 +3425,14 @@
     "X_val, y_val = load_data(val_videos)\n",
     "\n",
     "print(f\"Train samples: {len(y_train)}, Val samples: {len(y_val)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "330115b6",
+   "metadata": {},
+   "source": [
+    "### Train on multiple classifiers"
    ]
   },
   {
@@ -3593,6 +3779,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "de5182dc",
+   "metadata": {},
+   "source": [
+    "### Try out the best performing classifier "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a1c3580c",
@@ -3622,6 +3816,14 @@
     "acc = accuracy_score(y_val, y_pred)\n",
     "print(f\"Validation Accuracy: {acc:.4f}\")\n",
     "print(classification_report(y_val, y_pred, target_names=['no crash', 'crash']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "575b23e8",
+   "metadata": {},
+   "source": [
+    "### Perform Inference on Videos (without smoothing)"
    ]
   },
   {
@@ -3693,6 +3895,14 @@
     "out.release()\n",
     "cv2.destroyAllWindows()\n",
     "print(\"Done! Saved to:\", output_video_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddeafe63",
+   "metadata": {},
+   "source": [
+    "### Zero-shot crash classification using CLIP on the validation set"
    ]
   },
   {
@@ -3833,14 +4043,6 @@
     "plt.title('Confusion Matrix: Zero-Shot CLIP')\n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d17684ec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
