--- a/clip_classifier for crash(new).ipynb
+++ b/clip_classifier for crash(new).ipynb
@@ -17,6 +17,7 @@
    "source": [
     "import ndjson\n",
     "import json\n",
+    "import pickle\n",
     "import os\n",
     "import requests\n",
     "import numpy as np\n",
@@ -3816,6 +3817,45 @@
     "acc = accuracy_score(y_val, y_pred)\n",
     "print(f\"Validation Accuracy: {acc:.4f}\")\n",
     "print(classification_report(y_val, y_pred, target_names=['no crash', 'crash']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e030410",
+   "metadata": {},
+   "source": [
+    "### Specify the model name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5791d214",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL_NAME = 'classifier.pkl'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e73e832",
+   "metadata": {},
+   "source": [
+    "### Save the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af2784cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(MODEL_NAME, \"wb\") as f:\n",
+    "    pickle.dump(clf, f)\n",
+    "\n",
+    "print(f\"Model saved as {MODEL_NAME}\")"
    ]
   },
   {
