--- a/clip_classifier for crash(new).ipynb
+++ b/clip_classifier for crash(new).ipynb
@@ -399,6 +399,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4038ade1",
+   "metadata": {},
+   "source": [
+    "#### Specify every (nth) \"crash\" and \"no crash\" frames variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf4cc93f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CRASH_FRAMES_SAMPLING = 1 # Every single crash frame to be included in the dataset\n",
+    "NO_CRASH_FRAMES_SAMPLING = 15 # Every 15th no crash frame to be included in the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8a06fcfa",
@@ -2994,13 +3013,13 @@
     "\n",
     "            # 3. Write crash frames\n",
     "            for start, end in crash_ranges:\n",
-    "                for frame_number in range(start, end + 1):\n",
+    "                for frame_number in range(start, end + 1, CRASH_FRAMES_SAMPLING):\n",
     "                    image_label = f\"{IMAGES_DIRECTORY}/{video_name[:-4]}_{frame_number}_1.png\"\n",
     "                    writer.writerow([video_name, image_label[19:], frame_number, 1])  # Label 1 = crash\n",
     "                    extract_frame_by_iteration(video_path, frame_number, image_label, save=True)\n",
     "\n",
     "            # 4. Sample every nth (no crash) frame\n",
-    "            for frame_number in range(1, frame_count, 15):\n",
+    "            for frame_number in range(1, frame_count, NO_CRASH_FRAMES_SAMPLING):\n",
     "                if is_crash(frame_number, crash_ranges):\n",
     "                    continue  # Already handled\n",
     "\n",
